# libcsv

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
ci/travis/: build.sh  install-linux.sh  install-osx.sh  set-env.sh
cmake/: GoogleTest-CMakeLists.txt.in  LibCSVConfig.cmake.in
examples/: simple.c
include/: libcsv.h  libcsv.hpp
src/: libcsv.c
test/: CMakeLists.txt
test/data/: SOURCES.md
test/src/: main.cpp
